--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -115,8 +115,9 @@ jobs:
         uses: reactivecircus/android-emulator-runner@v2
         with:
           api-level: 29
-          profile: Nexus 6
-          script: mvn clean "-Dtest=/**/mobiletests/tests/LoginTest" test
+          target: playstore
+          profile: pixel_2
+          script: mvn clean "-Dtest=/**/mobiletests/tests/*Test" test
         env:
           Authorization: ${{ secrets.Authorization }}
           env: nhsDev # required
