[Haripriya] Initial commit , Refactor and add basic api tests

--- a/src/test/resources/config-nhs-dev.properties
+++ b/src/test/resources/config-nhs-dev.properties
@@ -10,21 +10,22 @@ APP_ACTIVITY= in.ndhm.phr.LauncherActivity
 APP_PACKAGE = in.ndhm.phr.debug
 
 # <--------------------------------------------- MOBILE - TEST DATA -------------------------------------------------->
-mobileUser      = mockhina
-mobilePassword  = Test@1324
+mobileUser      = mdubey
+mobilePassword  = Testing@1
 
 # <-------------------------------------------------- API - URLs ----------------------------------------------------->
-consentManagerURL   = https://dev.tweka.in/cm
-centralRegistryURL  = https://dev.tweka.in/central-registry
-HIUBaseURL          = https://dev.tweka.in/hiu-api
+consentManagerURL   = https://phrdev.ndhm.gov.in/cm
+centralRegistryURL  = https://phrdev.ndhm.gov.in/central-registry
+gatewayURL          = https://phrdev.ndhm.gov.in/gateway
+HIUBaseURL          = https://phrdev.ndhm.gov.in/hiu-api
 
 # <------------------------------------------------ API - TEST DATA -------------------------------------------------->
 # consent-manager test-data
-username    = test.sb.005@ndhm
-password    = Test135@
+username    = mdubey@ndhm
+password    = Testing@1
 accessKey   = token
 
 # HIU test-data
 HIUUsername = admin
 HIUPassword = password
-HIUPatient  = test.sb.005@ndhm
+HIUPatient  = mdubey@ndhm
