--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -10,24 +10,25 @@ APP_ACTIVITY= in.projecteka.jataayu.LauncherActivity
 APP_PACKAGE = in.projecteka.jataayu.debug
 
 # <--------------------------------------------- MOBILE - TEST DATA -------------------------------------------------->
-mobileUser      = apidemotest21
-mobilePassword  = Test135@
+mobileUser      = tmdubey
+mobilePassword  = Testing@1
 
 # <-------------------------------------------------- API - URLs ----------------------------------------------------->
-consentManagerURL   = https://ncg-dev.projecteka.in/consent-manager
-centralRegistryURL  = https://ncg-dev.projecteka.in/central-registry
-HIUBaseURL          = https://ncg-dev.projecteka.in/hiu-api
+consentManagerURL   = https://phrdev.ndhm.gov.in/consent-manager
+centralRegistryURL  = https://phrdev.ndhm.gov.in/central-registry
+gatewayURL          = https://phrdev.ndhm.gov.in/gateway
+HIUBaseURL          = https://phrdev.ndhm.gov.in/hiu-api
 
 # <------------------------------------------------ API - TEST DATA -------------------------------------------------->
 # consent-manager test-data
-username    = apidemotest30@ncg
-password    = Test135@
+username    = mdubey@ndhm
+password    = Testing@1
 accessKey   = accessToken
 
 # HIU test-data
-HIUUsername = lakshmi
+HIUUsername = admin
 HIUPassword = password
-HIUPatient  = apidemotest30@ncg
+HIUPatient  = mdubey@ndhm
 
 
 
