--- a/src/test/resources/config-nhs-sandbox.properties
+++ b/src/test/resources/config-nhs-sandbox.properties
@@ -9,5 +9,5 @@ APP_ACTIVITY= in.ndhm.phr.LauncherActivity
 APP_PACKAGE = in.ndhm.phr.debug
 
 # <--------------------------------------------- MOBILE - TEST DATA -------------------------------------------------->
-mobileUser      = navjotauto
+mobileUser      = test.test.001
 mobilePassword  = Test@135
